practice comarison operator

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -826,7 +826,7 @@
                     console.log("a-- =" , a--)
                    </script>-->
 
-                   <h1>Assignment operator</h1>
+                   <!--<h1>Assignment operator</h1>
                    <p id = "demo"></p>
                    <script>
                        let a = 2;
@@ -842,6 +842,19 @@
                        console.log(a)
                        a %= 5
                        console.log(a)
+                   </script>-->
+
+                   <h1>comparison operator</h1>
+                   <p id = "demo"></p>
+                   <script>
+                    let a = 6;
+                    let b =7;
+
+                    console.log("a == b" , a==b)
+                    console.log("a != b" , a!=b)
+                    console.log("a === b" , a===b)
+                    console.log("a !== b" , a!==b)
+                    console.log("a > b" , a>b)
                    </script>
 
 
