practice logical operator

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -844,7 +844,7 @@
                        console.log(a)
                    </script>-->
 
-                   <h1>comparison operator</h1>
+                   <!--<h1>comparison operator</h1>
                    <p id = "demo"></p>
                    <script>
                     let a = 6;
@@ -855,6 +855,18 @@
                     console.log("a === b" , a===b)
                     console.log("a !== b" , a!==b)
                     console.log("a > b" , a>b)
+                   </script>-->
+
+                   <h1>comparison operator</h1>
+                   <p id = "demo"></p>
+                   <script>
+                    let a = 6;
+                    let b =7;
+
+                    console.log(a<b && a==b)
+                    console.log(a<b || a==b)
+                    console.log(!true)
+                    console.log(!false)
                    </script>
 
 
