practice if statement

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -857,7 +857,7 @@
                     console.log("a > b" , a>b)
                    </script>-->
 
-                   <h1>comparison operator</h1>
+                   <!--<h1>comparison operator</h1>
                    <p id = "demo"></p>
                    <script>
                     let a = 6;
@@ -867,6 +867,17 @@
                     console.log(a<b || a==b)
                     console.log(!true)
                     console.log(!false)
+                   </script>-->
+
+                   <h1>condition statement</h1>
+                   <p id = "demo"></p>
+                   <script>
+                    let a =prompt("whats your age?")
+                    a = Number.parseInt(a)
+                    if(a>0){
+                      alert("this is valid age")
+                    }
+                    console.log(a)
                    </script>
 
 
