practice if-else statement

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -877,7 +877,9 @@
                     if(a>0){
                       alert("this is valid age")
                     }
-                    console.log(a)
+                    else{
+                      alert("this is invalid age")
+                    }
                    </script>
 
 
