--- a/js_pre1.html
+++ b/js_pre1.html
@@ -872,13 +872,19 @@
                    <h1>condition statement</h1>
                    <p id = "demo"></p>
                    <script>
-                    let a =prompt("whats your age?")
+                    let a = prompt("whats your age?")
                     a = Number.parseInt(a)
-                    if(a>0){
-                      alert("this is valid age")
+                    if(a>50){
+                      console.log("you are old")
+                    }
+                    else if(a<9){
+                       console.log("you are kid")
+                    }
+                    else if(a<18 && a>=9){
+                      console.log("you are teenager" )
                     }
                     else{
-                      alert("this is invalid age")
+                      console.log("you are young")
                     }
                    </script>
 
