--- a/js_pre1.html
+++ b/js_pre1.html
@@ -869,7 +869,7 @@
                     console.log(!false)
                    </script>-->
 
-                   <h1>condition statement</h1>
+                   <!--<h1>condition statement</h1>
                    <p id = "demo"></p>
                    <script>
                     let a = prompt("whats your age?")
@@ -886,6 +886,35 @@
                     else{
                       console.log("you are young")
                     }
+                   </script>-->
+
+                   <h1>switch statements</h1>
+                   <p id = "demo"></p>
+                   <script>
+                     let day;
+                     switch (new Date().getDay()) {
+                      case 0:
+                         day = "Sunday";
+                         break;
+                      case 1:
+                         day = "Monday";
+                         break;
+                      case 2:
+                         day = "Tuesday";
+                         break;
+                      case 3:
+                         day = "Wednesday";
+                         break;
+                      case 4:
+                        day = "Thursday";
+                        break;
+                      case 5:
+                        day = "Friday";
+                        break;
+                      case  6:
+                        day = "Saturday";
+                     }
+                      console.log("Today is " + day)
                    </script>
 
 
