practice ternary operator

--- a/js_pre1.html
+++ b/js_pre1.html
@@ -888,7 +888,7 @@
                     }
                    </script>-->
 
-                   <h1>switch statements</h1>
+                   <!--<h1>switch statements</h1>
                    <p id = "demo"></p>
                    <script>
                      let day;
@@ -915,7 +915,28 @@
                         day = "Saturday";
                      }
                       console.log("Today is " + day)
+                   </script>-->
+
+                   <h1>condition statement</h1>
+                   <p id = "demo"></p>
+                   <script>
+                    let a = prompt("whats your age?")
+                    a = Number.parseInt(a)
+                    if(a>50){
+                      console.log("you are old")
+                    }
+                    else if(a<9){
+                       console.log("you are kid")
+                    }
+                    else if(a<18 && a>=9){
+                      console.log("you are teenager" )
+                    }
+                    else{
+                      console.log("you are young")
+                    }
+                    console.log("you can", a<18? "not drive" :"drive")
                    </script>
+
 
 
 
